--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://vashishthdev15112005_db_user:uL4P0H2g3wl2wz73@cluster0.pmvrbzp.mongodb.net/book-review-db?retryWrites=true&w=majority
+mongodb+srv://vashishthdev15112005_db_user:MtvAOMHycBmGs3yo@cluster0.pmvrbzp.mongodb.net/<databasename>?retryWrites=true&w=majority
 JWT_SECRET=bookreviewsupersecret
